# comfy-kitchen

./: .gitignore  NOTICE  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
bench/: README.md  generate_configs.py  interactive_report.py  run_bench.py  workloads.json
bench/ops/: __init__.py  _base.py  adaln.py  gemm.py  qdq.py  rope.py
bench/recipes/: flux1-dev.json  flux2-klein-4b.json  flux2-klein-9b.json  krea2.json  zit.json
bench/tracer_node/: __init__.py  tracer.py
comfy_kitchen/: __init__.py  sage_attention.py  scaled_mm_v2.py
comfy_kitchen/backends/cuda/: CMakeLists.txt  __init__.py  dlpack_bindings.cpp  float_utils.cuh
comfy_kitchen/backends/cuda/ops/: adaln.cu  apply_rope.cu  convrot_w4a4.cu  cublas_gemm_int8.cu  cublas_gemm_nvfp4.cu  cutlass_gemm_int8.cu  int8_linear.cu  per_tensor_quantize.cu  quantize_mxfp8.cu  quantize_nvfp4.cu  rms_rope.cu  turing_int4.cu  turing_int8.cu
comfy_kitchen/backends/cuda/sage_attention/: attn_utils.cuh  cp_async.cuh  math.cuh  mma.cuh  numeric_conversion.cuh  permuted_smem.cuh  qk_int_sv_f8_cuda_sm89.cuh  quant_qk_int8.cu  quant_v_fp8.cu  sage_attn_launcher.cu
comfy_kitchen/backends/eager/: __init__.py  adaln.py  quantization.py  rope.py
comfy_kitchen/backends/triton/: __init__.py  quantization.py  rms_rope.py
comfy_kitchen/distributed/: __init__.py  gemm.py  modules.py
comfy_kitchen/tensor/: convrot_w4a4.py  int8.py  mxfp8.py
docs/: api-tensor.md  api.md  index.md
docs/javascripts/: toc-collapsible.js
samples/: multi_gpu_gemm.py
tests/: test_adaln.py  test_constraints.py  test_convrot_w4a4.py  test_int8.py  test_integration.py  test_qdq.py  test_rms_rope.py  test_rope.py  test_sage_attention.py  test_tensor.py
tests/sage_triton_ref/: __init__.py  quant_per_thread.py
